integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__cnft_get_token_accounts.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "total": 0,
  "limit": 10,
  "page": 1,
  "token_accounts": []
}
