integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__cnft_owners_table-with_different_owner.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
snapshot_kind: text
---
{
  "total": 0,
  "limit": 5,
  "page": 1,
  "items": []
}
