integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__cnft_scenario_mint_update_metadata_remove_creators.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
snapshot_kind: text
---
{
  "interface": "V1_NFT",
  "id": "Gi4fAXJdnWYrEPjQm3wnW9ctgG7zJjB67zHDQtRGRWyZ",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "2GuRg5JGumFcgKmZvp7fc5be9UsaNihP42WPEziZ9mEA",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "FsRoJdPqF4xJczL35QG1aQQG7g7DBZK1VF9Qs8zexssc",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "asset_hash": "CbsvyFdcQ8SyGaVpqNE5zjLfSbgnuKDnJZEyQgC4P5Wt",
    "tree": "8PkWaY1BYd6ysBZt3JEwuAXjNrZE6omW18cKEJzbyaw4",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": true,
  "burnt": false
}
